[tool.poetry]
name = "repl_python3_Exeter-Selfbot-1"
version = "0.1.0"
description = ""
authors = ["JusxOp <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
colorama = "^0.4.4"
discord = "^1.7.3"
gTTS = "^2.2.4"
discord-webhook = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
